--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <h1>This is our cool new site</h1>
         
-        <script src="" async defer></script>
+        <script src="scripts.js" async defer></script>
     </body>
 </html>
