pushing the html layout

--- a/budget-example.html
+++ b/budget-example.html
@@ -15,7 +15,7 @@
         <main>
 
             <div class="main" id="monthly_budget_section">
-                <h3>Monthly budget:</h3>
+                <h3>weekly budget:</h3>
                 <p id="monthly_budget"></p>
                 <form>
                     <input type="number" id="income_input" placeholder="Monthly income" />
