--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
         <h1>My Weekly Budget</h1>
 
-    <section>
-        <div >
+    <section id="remaining_balance">
+        <div>
             <p>Remaining Balance $</p>
         </div>
     </section>
 
-    <section>
-        <div class="main" id="add_expense_section"> 
+    <section id="add_expense_section">
+        <div> 
             <h2>Add Expense:</h2>
             <form>
-                <label for="name_input" id="category_label">Select a category: </label>
+                <label for="name_input" id="category_label">Select a category</label>
 
             <select name="category" id="name_input">
                 <option>Select a category</option>
@@ -37,12 +37,11 @@
                 <option value="bills">Bills</option>
             </select>
         
-            <label input type="text">Expense amount
+            <label for="amount_input" id="expense_amount_label">Expense amount</label>
               <input type="number" id="amount_input" placeholder="Expense amount" />
-            </label>
-
+            
             <div>
-                <button id="add_expense">Submit</button>
+                <button id="submit_expense">Submit</button>
             </div>
 
             </form>
