--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <section>
         <div>
-            <h2>Total Spent: $</h2>
+            <h2>Total Spent: $ <span class="red" >sum</span></h2>
         </div>
     </section>
         
