--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <tr>
                     <td>Entertainment</td>
                     <td><input type="number" id="ent_input" placeholder="Enter amount" /></td>
-                    <td id="ent_remaining"></td>
+                    <td id="ent_balance"></td>
                 </tr>
                 <tr>
                     <td>Food</td>
