additional js updates

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <section id="total_spent_section">
         <div>
-            <h2>Total Spent:  <span class="red" id="total_expenses"></span></h2>
+            <h2>Total Spent:  <span class="yellow" id="total_expenses"></span></h2>
         </div>
     </section>
 
