--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
             <select name="category" id="name_input">
                 <option>Select a Category</option>
-                <option value="entertainment">Entertainment</option>
-                <option value="food">Food</option>
-                <option value="clothing">Clothing</option>
-                <option value="bills">Bills</option>
+                <option value="Entertainment">Entertainment</option>
+                <option value="Food">Food</option>
+                <option value="Clothing">Clothing</option>
+                <option value="Bills">Bills</option>
             </select>
         </div>
 
@@ -79,11 +79,18 @@
 
             </form>
     </section>
+
+    <section id="expense_list_section">
+        <div>
+            <h2>Expenses</h2>
+            <div id="expense_list"></div>
+        </div>
+    </section>
         
-     <section id="spend_section">  
+     <!-- <section id="spend_section">  
         <h2>Spend Analysis</h2>
         <div id="piechart"></div>       
-    </section>
+    </section> -->
 
     <section id="total_spent_section">
         <div>
@@ -91,10 +98,7 @@
         </div>
     </section>
 
-    <div id="expense_list_section">
-        <h3>Expenses:</h3>
-        <div id="expense_list"></div>
-    </div>
+
 
    
         
