add working donut

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         </div>
     </section>
         
-     <!-- <section id="spend_section">  
+     <section id="spend_section">  
         <h2>Spend Analysis</h2>
         <div id="piechart"></div>       
-    </section> -->
+    </section>
 
     <section id="total_spent_section">
         <div>
